[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/player.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.00212, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="GeneralTimers" type="Node" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="GeneralTimers"]
wait_time = 0.5
one_shot = true

[node name="SwitchDetector" type="Timer" parent="GeneralTimers"]
wait_time = 0.3
one_shot = true

[node name="SkillTimers" type="Node" parent="."]

[node name="EarthCooldown" type="Timer" parent="SkillTimers"]
wait_time = 0.5
one_shot = true

[node name="FireCooldown" type="Timer" parent="SkillTimers"]
wait_time = 1.8
one_shot = true

[node name="WindCooldown" type="Timer" parent="SkillTimers"]
wait_time = 0.9
one_shot = true

[connection signal="timeout" from="GeneralTimers/InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="timeout" from="GeneralTimers/SwitchDetector" to="." method="_on_SwitchDetector_timeout"]
[connection signal="timeout" from="SkillTimers/EarthCooldown" to="." method="_on_EarthCooldown_timeout"]
[connection signal="timeout" from="SkillTimers/FireCooldown" to="." method="_on_FireCooldown_timeout"]
[connection signal="timeout" from="SkillTimers/WindCooldown" to="." method="_on_WindCooldown_timeout"]
